# AMD_Robotics_Hackathon_2025_ProjectTemplate

./: .gitignore  README.md
mission1/: README.md
mission2/3d_model/: tic-tac-toe_box.stl  tic-tac-toe_outer-frame.stl  tic_tac_toe_figure_o.stl  tic_tac_toe_figure_x.stl  tic_tac_toe_table.stl
mission2/code/: Makefile
mission2/code/pipeline/: README.md
mission2/code/sandbox/obs-cli/: README.md  main.py  pyproject.toml
mission2/code/tic-tac-toe-planner/: README.md  pyproject.toml  tic_tac_toe_planner.py
mission2/code/tic_tac_toe_overlay/: .gitignore  CLAUDE.md  DATASET_CARD.md  MODEL_CARD.md  Makefile  README.md  __init__.py  export_parquet.py  label_tool.py  main.py  pyproject.toml  train_rocm.ipynb
mission2/code/tic_tac_toe_overlay/models/debug_cells/: args.yaml  results.csv
mission2/code/tic_tac_toe_overlay/models/train/: args.yaml  results.csv
mission2/code/tic_tac_toe_overlay/real/labels/: top-camera01.txt  top-camera02.txt  top-camera03.txt  top-camera04.txt  top-camera05.txt  top-camera06.txt  top-camera07.txt  top-camera08.txt  top-camera09.txt  top-camera10.txt  top-camera11.txt  top-camera12.txt  top-camera13.txt  top-camera14.txt  top-camera15.txt  top-camera16.txt  top-camera17.txt  top-camera18.txt  top-camera19.txt  top-camera20.txt  top-camera21.txt  top-camera22.txt  top-camera23.txt  top-camera24.txt  top-camera25.txt  top-camera26.txt  top-camera27.txt  top-camera28.txt  top-camera29.txt  top-camera30.txt  top-camera31.txt  top-camera32.txt  top-camera33.txt  top-camera34.txt  top-camera35.txt  top-camera36.txt  top-camera37.txt  top-camera38.txt  top-camera39.txt  top-camera40.txt  (+19 more)
mission2/code/ttt-pipeline/: README.md  main.py  pyproject.toml
mission2/code/turn-detector/: README.md  pyproject.toml  turn_detector.py
mission2/wandb/act/wandb/: latest-run
mission2/wandb/act/wandb/run-20251207_040518-jdqkguxv/: run-jdqkguxv.wandb
mission2/wandb/act/wandb/run-20251207_040518-jdqkguxv/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
mission2/wandb/pi05/wandb/: latest-run
mission2/wandb/pi05/wandb/run-20251207_035706-xut2bisp/: run-xut2bisp.wandb
mission2/wandb/pi05/wandb/run-20251207_035706-xut2bisp/files/: config.yaml  wandb-metadata.json  wandb-summary.json
