[project]
name = "tic-tac-toe-planner"
version = "0.1.0"
description = "CLI that reads tic-tac-toe board state text/JSON and proposes the next move using a local Transformers LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "obsws-python>=1.6.0",
    "huggingface-hub>=0.25.0",
    "torch>=2.2.0",
    "transformers>=4.43.0",
]

[project.scripts]
ttt-planner = "tic_tac_toe_planner:main"

[tool.uv]
package = true
