[project]
name = "tic-tac-toe-pipeline"
version = "0.1.0"
description = "Stream pipeline that links tic_tac_toe_overlay and tic-tac-toe-planner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.50",
    "numpy>=1.26",
    "huggingface-hub>=0.23",
    "obsws-python>=1.6.0",
]

[tool.uv]
package = false
